--- a/main.css
+++ b/main.css
@@ -5,10 +5,15 @@ h1 {
 
 h3 {
     text-align: center;
+    margin-top: 1em;
+    padding-top: 1em;
 }
 
 body {
-    color: #3F3F3F;
+    font-size: 16px;
+    color: #333333;
+    line-height: 1.5;
+    padding: 4em 1em;
     margin: auto;
     max-width: 50em;
 }
