--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
 	font-family: 'Rubik', Helvetica, sans-serif;
 	font-size: 16px;
 	line-height: 1.5;
+	color: #444;
 }
 
 img {
@@ -14,6 +15,7 @@ img {
 
 a {
 	text-decoration: none;
+	color: rgb(225, 100, 200);
 }
 
 header,
@@ -69,13 +71,12 @@ nav {
 }
 
 .jumbotron {
-	background-image: url("../images/dtla.jpg");
+	background-image: linear-gradient(rgba(0, 0, 0, 1) -5%, transparent, rgba(255, 255, 255, 1) 90%),
+										url("../img/dtla.jpg");
 	background-color: rgba(0, 0, 0, .6);
-	background-blend-mode: darken;
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-position: 50% 25%;
-	opacity: 0.9;
+	background-position: 50% 20%;
 	height: 70vh;
 	width: 100%;
 	display: flex;
@@ -95,17 +96,28 @@ MAIN CONTENT
 ********** */
 
 .col {
-	/*background: rgba(245, 245, 245, .1);
-	box-shadow: 0 1px 4px  rgba(0, 0, 0, .8);*/
 	padding: 8px 8px;
-	margin: 10px;
+	margin: 20px 10px;
 }
 
 .col h3 {
 	text-align: center;
-	color: rgb(225, 100, 200);
+	background: rgb(80, 200, 220);
+	color: white;
 	font-weight: bolder;
 	margin-top: 0;
+}
+
+.contact ul {
+	list-style: none;
+	margin: none;
+	padding-left: 0;
+}
+
+.contact img {
+	width: 20px;
+	height: 20px;
+	margin-right: 10px;
 }
 
 /************
@@ -118,12 +130,30 @@ footer {
 	padding: 1em 0;
 	margin-bottom: 0;
 	text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .social-profiles {
 	padding: 0;
 	margin: 0;
 	list-style: none;
+	display: flex;
+}
+
+.social-profiles a {
+	display: inline-block;
+	margin: 0 8px;
+	padding: 8px;
+}
+
+.social-profiles img:hover {
+	transform: scale(1.5, 1.5);
+}
+
+.copyright {
+	font-size: 0.75em;
 }
 
 @media screen and (min-width: 769px) {
