--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
 	font-size: 16px;
 	line-height: 1.5;
 	color: #444;
+	min-width: 320px;
 }
 
 img {
@@ -108,6 +109,24 @@ MAIN CONTENT
 	margin-top: 0;
 }
 
+.experience ul {
+	list-style: none;
+	padding: 0;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.experience li {
+	background: rgb(225, 100, 200);
+	color: #fff;
+	padding: 10px;
+	margin: 10px 0;
+	border-radius: 5px;
+	width: 40%;
+}
+
 .contact ul {
 	list-style: none;
 	margin: none;
@@ -156,7 +175,7 @@ footer {
 	font-size: 0.75em;
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 481px) {
 	nav {
 		display: flex;
 		flex-direction: row;
@@ -166,14 +185,26 @@ footer {
 	.container {
 		display: flex;
 		flex-wrap: wrap;
-		justify-content: flex-end;
-	}
-
-	.col {
-		flex: 1;
 	}
 }
 
-@media (min-width: 1025px) {
+@media screen and (min-width: 640px) {
+	.col {
+		width: 45%;
+		flex-grow: 1;
+	}
 
+	.experience {
+		order: 2;
+	}
+}
+
+@media screen and (min-width: 960px) {
+	.col {
+		width: 30%;
+	}
+
+	.contact {
+		order: 3;
+	}
 }
